Fix for margins on iPhone

--- a/wp-content/themes/thatcampdev/assets/less/forms.less
+++ b/wp-content/themes/thatcampdev/assets/less/forms.less
@@ -175,7 +175,7 @@ a.button.socialbutton, a:visited.button.socialbutton, a:link.button.socialbutton
 }
 
 .offset{
-	float: right;
+	float: none;
 }
 
 #sidebar-login-form label{
