--- a/wp-content/themes/thatcampdev/assets/less/logical-1024.less
+++ b/wp-content/themes/thatcampdev/assets/less/logical-1024.less
@@ -54,3 +54,6 @@
 #twitterwidget-wrapper{
 	display: block;
 }
+.offset{
+	float: right;
+}
