--- a/wp-content/themes/thatcampdev/assets/less/logical-1140.less
+++ b/wp-content/themes/thatcampdev/assets/less/logical-1140.less
@@ -64,3 +64,6 @@ nav#show-menu{
 #twitterwidget-wrapper{
 	display: block;
 }
+.offset{
+	float: right;
+}
